@@ -37,31 +37,30 @@ $t->get_ok('/api/connections')->status_is(200)->json_is(
     protocol            => 'irc',
     service_accounts    => [qw(chanserv nickserv)],
     state               => 'disconnected',
-    url                 => 'irc://irc.example.com:6667?remote_address=127.0.0.1',
+    url                 => 'irc://irc.example.com:6667',
     wanted_state        => 'disconnected',
   }
 )->json_is('/connections/1/connection_id', 'irc-localhost')
   ->json_is('/connections/1/name',         'localhost')
   ->json_is('/connections/1/wanted_state', 'disconnected')
-  ->json_is('/connections/1/url',          "irc://localhost:$port?remote_address=127.0.0.1");
+  ->json_is('/connections/1/url',          "irc://localhost:$port");
 
 $t->post_ok('/api/connection/irc-doesnotexist', json => {url => 'foo://example.com:9999'})
   ->status_is(404);
 $t->post_ok('/api/connection/irc-example', json => {})->status_is(200);
 
 my $connection = $user->get_connection('irc-localhost');
-$t->post_ok('/api/connection/irc-localhost',
-  json => {url => "irc://localhost:$port?remote_address=127.0.0.1"})->status_is(200)
-  ->json_is('/name' => 'localhost')->json_is('/state' => 'disconnected');
-$t->post_ok('/api/connection/irc-localhost',
-  json => {url => 'irc://example.com:9999?remote_address=127.0.0.1'})->status_is(200)
-  ->json_is('/name' => 'localhost')->json_like('/url' => qr{irc://example\.com:9999});
+$t->post_ok('/api/connection/irc-localhost', json => {url => "irc://localhost:$port"})
+  ->status_is(200)->json_is('/name' => 'localhost')->json_is('/state' => 'disconnected');
+$t->post_ok('/api/connection/irc-localhost', json => {url => 'irc://example.com:9999'})
+  ->status_is(200)->json_is('/name' => 'localhost')
+  ->json_like('/url' => qr{irc://example\.com:9999});
 
 $connection->state(disconnected => '');
 $t->post_ok('/api/connection/irc-localhost',
   json => {url => 'irc://example.com:9999', wanted_state => 'connected'})->status_is(200)
   ->json_is('/name' => 'localhost')->json_is('/state' => 'queued')
-  ->json_is('/url'  => 'irc://example.com:9999?remote_address=127.0.0.1&nick=superman&tls=1');
+  ->json_is('/url'  => 'irc://example.com:9999?nick=superman&tls=1');
 
 $connection->state(connected => '');
 $t->post_ok(
@@ -72,29 +71,26 @@ $t->post_ok(
   }
 )->status_is(200)->json_is('/name' => 'localhost')->json_is('/state' => 'connected')
   ->json_is('/on_connect_commands', ['/msg NickServ identify s3cret', '/msg too_cool 123'])
-  ->json_is('/url' => 'irc://example.com:9999?tls=1&remote_address=127.0.0.1&nick=superman');
+  ->json_is('/url' => 'irc://example.com:9999?tls=1&nick=superman');
 
 $t->post_ok('/api/connection/irc-localhost',
   json => {url => 'irc://foo:bar@example.com:9999?tls=0&nick=superman'})->status_is(200)
-  ->json_is('/url' => 'irc://foo:bar@example.com:9999?tls=0&nick=superman&remote_address=127.0.0.1')
+  ->json_is('/url'   => 'irc://foo:bar@example.com:9999?tls=0&nick=superman')
   ->json_is('/state' => 'queued');
 
 $connection->state(connected => '');
 $t->post_ok('/api/connection/irc-localhost',
   json =>
     {url => 'irc://foo:s3cret@example.com:9999?tls=0&nick=superman', wanted_state => 'connected'})
-  ->status_is(200)
-  ->json_is(
-  '/url' => 'irc://foo:s3cret@example.com:9999?tls=0&nick=superman&remote_address=127.0.0.1')
+  ->status_is(200)->json_is('/url' => 'irc://foo:s3cret@example.com:9999?tls=0&nick=superman')
   ->json_is('/state' => 'queued');
 
-is $connection->TO_JSON(1)->{url},
-  'irc://foo:s3cret@example.com:9999?tls=0&nick=superman&remote_address=127.0.0.1', 'to json url';
+is $connection->TO_JSON(1)->{url}, 'irc://foo:s3cret@example.com:9999?tls=0&nick=superman',
+  'to json url';
 
 $t->post_ok('/api/connection/irc-localhost',
   json => {url => 'irc://foo:s3cret@example.com:9999?tls=0&nick=superman'})->status_is(200);
-is $connection->TO_JSON(1)->{url},
-  'irc://foo:s3cret@example.com:9999?tls=0&remote_address=127.0.0.1&nick=superman',
+is $connection->TO_JSON(1)->{url}, 'irc://foo:s3cret@example.com:9999?tls=0&nick=superman',
   'no change with same username';
 
 $t->get_ok('/api/connections')->status_is(200)->json_is('/connections/1/on_connect_commands',
