@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 6.08 Not Released
  - Simpler Convos::Core::Settings by removing support for deprecated environment variables
+ - Moved "remote_address" tracking from connection URL to user object
 
 6.07 2021-03-24T12:44:00+0900
  - Add dependency information to Admin page
